fix but with the match page having a double scroll thing going on

--- a/src/pages/MatchPage.css
+++ b/src/pages/MatchPage.css
@@ -1,8 +1,3 @@
-.page {
-    max-height: 100vh;
-
-    overflow-y: scroll;
-}
 
 .match-table {
     overflow: auto;
